@@ -92,7 +92,7 @@
                 <div class="col-12 mb-2 d-flex justify-content-center gap-2">
                     <button class="btn btn-secondary" id="btn-change-car">Conferma modifiche</button>
                     <button class="btn btn-secondary" id="btn-cancel-car">Annulla modifiche</button>
-                    <button class="btn btn-secondary" id="btn-delete-car">Elimina marchio</button>
+                    <button class="btn btn-secondary" id="btn-delete-car">Elimina auto</button>
                 </div>
                 <div class="col-12" id="car-change-alert"></div>
             </div>
