@@ -17,6 +17,7 @@
             </div>
             <div class="row">
                 <div class="col-md-5 d-flex align-items-start" id="carousel-container">
+                    
                 </div>
                 <div class="col-md-7 d-flex align-items-center car-details-table roundend overflow-hidden border">    
                     <table class="table table-striped-columns">
@@ -37,8 +38,8 @@
                             <td><span id="price"></span>€</td>
                         </tr>
                         <tr>
-                            <th scope="row">Quantità acquistata</th>
-                            <td><span id="quantity"></span></td>
+                            <th scope="row">Vetture disponibili</th>
+                            <td><span id="quantity-available"></span></td>
                         </tr>
                         <tr>
                             <th scope="row">Alimentazione</th>
@@ -49,8 +50,8 @@
                             <td><span id="engine-autonomy"></span>km con un pieno</td>
                         </tr>
                         <tr>
-                            <th scope="row">Colore</th>
-                            <td id="color"></td>
+                            <th scope="row">Colori disponibili</th>
+                            <td id="colors-available"></td>
                         </tr>
                         <tr>
                             <th scope="row">Posti</th>
@@ -65,14 +66,14 @@
                             <td id="car-type"></td>
                         </tr>
                         <tr>
-                            <th scope="row">Optional attivati</th>
-                            <td id="optionals-activated" style="color: black !important;">
+                            <th scope="row">Optional disponibili</th>
+                            <td id="optionals-available" style="color: black !important;">
                                 
                             </td>
                         </tr>
                     </table>
                 </div>
-            </div>    
+            </div>  
         </div>
 
         <div id="body-spacer"></div>
@@ -133,7 +134,7 @@
         <script src="../../bootstrap/dist/js/bootstrap.bundle.min.js"></script>
         <script type="module" src="../../js-frontend/pagination.js"></script>
         <script type="module" src="../../js-frontend/custom-navbar.js"></script>
-        <script type="module" src="../../js-frontend/page_car-details-purchase-list.js"></script>
+        <script type="module" src="../../js-frontend/page_car-details-showroom.js"></script>
         <script type="module" src="../../js-frontend/theme.js"></script>
         <script type="module" src="../../js-frontend/search-input.js"></script>
         <script src="../../js-frontend/ping-reply.js"></script>
